[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
bytes = "1.4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
chrono = "0.4"

[[bin]]
name="server"
path="src/main.rs"

[[bin]]
name="client"
path="src/client.rs"

[[bin]]
name="destination"
path="src/destination.rs"